# machinelearning-carnival

./: Decision_Trees_Chapter3.ipynb  README.md  dorm_assignment_optimizer.py  flight_optimizer.py  genetic_programming.py  k-NearestNeighbors_Chapter2.ipynb  naive_bayes_classifier.py  pyproject.toml  recommendations.py
archive/: Linear_Regression.ipynb
archive/keras/: Boston_Housing_Price.ipynb  Simple_Keras_with_MNIST.ipynb
keras/: imdb_movie_reviews.ipynb
tensorflow/: Linear Regression and beyond.ipynb
tournament/: core.py  main.py
tournament/tests/: test_core.py
