[project]
name = "machinelearning-carnival"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tournament"]

[project.scripts]
prob = "tournament.main:calculate_probabilities"

[tool.uv]
package = true
